--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Web Developer</title>
+    <title>Breaking News 48</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="#" class="nav-logo">YourName.</a>
+            <a href="#" class="nav-logo">BreakingNews48.</a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
@@ -29,7 +29,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="hero-title">Hi, I'm [Your Name]</h1>
+                <h1 class="hero-title">Hi, I'm BreakingNews48</h1>
                 <p class="hero-subtitle">A Passionate Web Developer & UI/UX Enthusiast</p>
                 <a href="#projects" class="btn btn-primary">View My Work</a>
             </div>
@@ -93,14 +93,16 @@
             <div class="container">
                 <h2 class="section-title">Get In Touch</h2>
                 <p class="contact-text">I'm currently available for freelance work. If you have a project in mind or just want to say hi, feel free to send me a message!</p>
-                <a href="mailto:your.email@example.com" class="btn btn-primary">Say Hello</a>
+                <a href="breakingnews0048@gmail.com" class="btn btn-primary">Gmail</a>
+                <a href="https://www.instagram.com/breakingnews.48" class="btn btn-primary">Instagram</a>
+                <a href="https://tiktok.com/@news48official" class="btn btn-primary">Tiktok</a>
             </div>
         </section>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 [Your Name]. All Rights Reserved.</p>
+            <p>&copy; 2025 BreakingNews48. All Rights Reserved.</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -111,4 +113,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+        </html>
