--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="#" class="nav-logo">BreakingNews48.</a>
+            <a href="#" class="nav-logo">BreakingNews48</a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
@@ -29,8 +29,8 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="hero-title">Hi, I'm BreakingNews48</h1>
-                <p class="hero-subtitle">A Passionate Web Developer & UI/UX Enthusiast</p>
+                <h1 class="hero-title">BreakingNews48 Community</h1>
+                <p class="hero-subtitle">Hallo Guys</p>
                 <a href="#projects" class="btn btn-primary">View My Work</a>
             </div>
         </section>
@@ -40,11 +40,10 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://via.placeholder.com/350" alt="Your Photo">
+                        <img src="https://files.catbox.moe/0r8dbg.jpg" alt="Your Photo">
                     </div>
                     <div class="about-text">
-                        <p>Hello! I'm a creative developer based in [Your City], specializing in building (and occasionally designing) exceptional digital experiences. I enjoy turning complex problems into simple, beautiful, and intuitive designs.</p>
-                        <p>When I'm not coding, you can find me exploring the latest tech trends, reading a good book, or enjoying a cup of coffee.</p>
+                        <p>Memberikan Informasi Berita Seputar JKT48 & KLP48</p>
                         <div class="skills">
                             <span class="skill">HTML</span>
                             <span class="skill">CSS</span>
@@ -113,4 +112,4 @@
 
     <script src="script.js"></script>
 </body>
-        </html>
+</html>
