--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://files.catbox.moe/0r8dbg.jpg" alt="Your Photo">
+                        <img src="https://telegra.ph/file/95ce3214ddd4347c2bb79-b5c7e67a393943fdba.jpg" alt="Your Photo">
                     </div>
                     <div class="about-text">
                         <p>Memberikan Informasi Berita Seputar JKT48 & KLP48</p>
