--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Sosial Media</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -43,12 +43,6 @@
                     </div>
                     <div class="about-text">
                         <p>Memberikan Informasi Berita Seputar JKT48 & KLP48</p>
-                        <div class="skills">
-                            <span class="skill">HTML</span>
-                            <span class="skill">CSS</span>
-                            <span class="skill">JavaScript</span>
-                            <span class="skill">React</span>
-                            <span class="skill">Figma</span>
                         </div>
                     </div>
                 </div>
@@ -87,12 +81,14 @@
             </div>
         </section>
 
-        <section id="contact" class="contact-section">
+        <section id="Sosial Media" class="contact-section">
             <div class="container">
-                <h2 class="section-title">Get In Touch</h2>
-                <p class="contact-text">I'm currently available for freelance work. If you have a project in mind or just want to say hi, feel free to send me a message!</p>
+                <h2 class="section-title">Sosial Media</h2>
+                <p class="contact-text">Buat Kalian Yang Mau Kerja Sama Atau Mengajak Media Partner Bisa Hubungi Kontak Dibawah Ini</p>
                 <a href="breakingnews0048@gmail.com" class="btn btn-primary">Gmail</a>
+                
                 <a href="https://www.instagram.com/breakingnews.48" class="btn btn-primary">Instagram</a>
+                
                 <a href="https://tiktok.com/@news48official" class="btn btn-primary">Tiktok</a>
             </div>
         </section>
