--- a/index.html
+++ b/index.html
@@ -85,11 +85,7 @@
             <div class="container">
                 <h2 class="section-title">Sosial Media</h2>
                 <p class="contact-text">Buat Kalian Yang Mau Kerja Sama Atau Mengajak Media Partner Bisa Hubungi Kontak Dibawah Ini</p>
-                <a href="breakingnews0048@gmail.com" class="btn btn-primary">Gmail</a>
-                
-                <a href="https://www.instagram.com/breakingnews.48" class="btn btn-primary">Instagram</a>
-                
-                <a href="https://tiktok.com/@news48official" class="btn btn-primary">Tiktok</a>
+                <a href="https://heylink.me/breakingnews48" class="btn btn-primary">My Contact</a>
             </div>
         </section>
     </main>
