--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Sosial Media</a></li>
+                <li class="nav-item"><a href="#Sosial Media" class="nav-link">Sosial Media</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
