--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#" class="nav-logo">BreakingNews48</a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#informasi" class="nav-link">Informasi</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                 <li class="nav-item"><a href="#Sosial Media" class="nav-link">Sosial Media</a></li>
             </ul>
@@ -48,6 +49,17 @@
                 </div>
             </div>
         </section>
+
+        <section id="Sosial Media" class="contact-section">
+            <div class="container">
+                <h2 class="section-title">Informasi</h2>
+                <p class="contact-text">Informasi Seputar JKT48 & KLP48</p>
+                <a href="https://beritajkt48.github.io/event/" class="btn btn-primary">Jadwal Event JKT48 & KLP48</a>
+                <a href="https://beritajkt48.github.io/member/" class="btn btn-primary">Member JKT48 & KLP48</a>
+                <a href="https://beritajkt48.github.io/info/birthday/" class="btn btn-primary">Ulang Tahun Member</a>
+            </div>
+        </section>
+    </main>
 
         <section id="projects" class="projects-section">
             <div class="container">
