--- a/index.html
+++ b/index.html
@@ -50,43 +50,32 @@
             </div>
         </section>
 
-        <section id="Sosial Media" class="contact-section">
+        <section id="Informasi" class="projects-section">
             <div class="container">
                 <h2 class="section-title">Informasi</h2>
-                <p class="contact-text">Informasi Seputar JKT48 & KLP48</p>
-                <a href="https://beritajkt48.github.io/event/" class="btn btn-primary">Jadwal Event JKT48 & KLP48</a>
-                <a href="https://beritajkt48.github.io/member/" class="btn btn-primary">Member JKT48 & KLP48</a>
-                <a href="https://beritajkt48.github.io/info/birthday/" class="btn btn-primary">Ulang Tahun Member</a>
-            </div>
-        </section>
-    </main>
-
-        <section id="projects" class="projects-section">
-            <div class="container">
-                <h2 class="section-title">My Projects</h2>
                 <div class="project-gallery">
                     <div class="project-card">
                         <img src="https://via.placeholder.com/400x300" alt="Project 1">
                         <div class="project-info">
-                            <h3 class="project-title">Project One</h3>
-                            <p>A short description of the project goes here. Explain the tech stack and your role.</p>
-                            <a href="#" class="btn btn-secondary">View Demo</a>
+                            <h3 class="project-title">Jadwal Event JKT48 & KLP48</h3>
+                            <p>Berikut Adalah Jadwal Event JKT48 & KLP48</p>
+                            <a href="https://beritajkt48.github.io/event/" class="btn btn-secondary">Klik Here</a>
                         </div>
                     </div>
                     <div class="project-card">
                         <img src="https://via.placeholder.com/400x300" alt="Project 2">
                         <div class="project-info">
-                            <h3 class="project-title">Project Two</h3>
-                            <p>A short description of the project goes here. Explain the tech stack and your role.</p>
-                            <a href="#" class="btn btn-secondary">View Demo</a>
+                            <h3 class="project-title">Member JKT48 & KLP48</h3>
+                            <p>Berikut Adalah Nama Member Dan Sosial Media Member JKT48 & KLP48</p>
+                            <a href="https://beritajkt48.github.io/member/" class="btn btn-secondary">Klik Here</a>
                         </div>
                     </div>
                     <div class="project-card">
                         <img src="https://via.placeholder.com/400x300" alt="Project 3">
                         <div class="project-info">
-                            <h3 class="project-title">Project Three</h3>
-                            <p>A short description of the project goes here. Explain the tech stack and your role.</p>
-                            <a href="#" class="btn btn-secondary">View Demo</a>
+                            <h3 class="project-title">Ulang Tahun Member</h3>
+                            <p>Berikut Adalah Tanggal, Bulan, Dan Tahun Ulang Tahun Member JKT48 & KLP48</p>
+                            <a href="https://beritajkt48.github.io/info/birthday/" class="btn btn-secondary">Klik Here</a>
                         </div>
                     </div>
                 </div>
