--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://telegra.ph/file/95ce3214ddd4347c2bb79-b5c7e67a393943fdba.jpg" alt="Your Photo">
+                        <img src="https://telegra.ph/file/c85126b5a0e6ec598bc35-a4337ccc8f72d7a6a9.jpg" alt="Your Photo">
                     </div>
                     <div class="about-text">
                         <p>Memberikan Informasi Berita Seputar JKT48 & KLP48</p>
@@ -55,7 +55,7 @@
                 <h2 class="section-title">Informasi</h2>
                 <div class="project-gallery">
                     <div class="project-card">
-                        <img src="https://via.placeholder.com/400x300" alt="Project 1">
+                        <img src="https://telegra.ph/file/95ce3214ddd4347c2bb79-b5c7e67a393943fdba.jpg" alt="BreakingNews48">
                         <div class="project-info">
                             <h3 class="project-title">Jadwal Event JKT48 & KLP48</h3>
                             <p>Berikut Adalah Jadwal Event JKT48 & KLP48</p>
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="https://via.placeholder.com/400x300" alt="Project 2">
+                        <img src="https://telegra.ph/file/95ce3214ddd4347c2bb79-b5c7e67a393943fdba.jpg" alt="BreakingNews48">
                         <div class="project-info">
                             <h3 class="project-title">Member JKT48 & KLP48</h3>
                             <p>Berikut Adalah Nama Member Dan Sosial Media Member JKT48 & KLP48</p>
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="project-card">
-                        <img src="https://via.placeholder.com/400x300" alt="Project 3">
+                        <img src="https://telegra.ph/file/95ce3214ddd4347c2bb79-b5c7e67a393943fdba.jpg" alt="BreakingNews48">
                         <div class="project-info">
                             <h3 class="project-title">Ulang Tahun Member</h3>
                             <p>Berikut Adalah Tanggal, Bulan, Dan Tahun Ulang Tahun Member JKT48 & KLP48</p>
