--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <section id="Informasi" class="projects-section">
+        <section id="informasi" class="projects-section">
             <div class="container">
                 <h2 class="section-title">Informasi</h2>
                 <div class="project-gallery">
