--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="container">
                 <h2 class="section-title">Sosial Media</h2>
                 <p class="contact-text">Buat Kalian Yang Mau Kerja Sama Atau Mengajak Media Partner Bisa Hubungi Kontak Dibawah Ini</p>
-                <a href="https://heylink.me/breakingnews48" class="btn btn-primary">My Contact</a>
+                <a href="https://heylink.me/breakingnews48" class="btn btn-primary">Contact Person</a>
             </div>
         </section>
     </main>
