--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h1 class="hero-title">BreakingNews48 Community</h1>
+                <p class="hero-subtitle">Memberikan Informasi Berita Seputar JKT48 & KLP48</p>
                 <a href="#projects" class="btn btn-primary">View My Work</a>
             </div>
         </section>
@@ -43,8 +44,7 @@
                         <img src="https://telegra.ph/file/c85126b5a0e6ec598bc35-a4337ccc8f72d7a6a9.jpg" alt="Your Photo">
                     </div>
                     <div class="about-text">
-                        <p>Memberikan Informasi Berita Seputar JKT48 & KLP48</p>
-                        </div>
+                     </div>
                     </div>
                 </div>
             </div>
