--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                     <div class="about-image">
                         <img src="https://telegra.ph/file/c85126b5a0e6ec598bc35-a4337ccc8f72d7a6a9.jpg" alt="Your Photo">
                     </div>
-                    <div class="about-text">
-                     </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -86,7 +85,7 @@
             <div class="container">
                 <h2 class="section-title">Sosial Media</h2>
                 <p class="contact-text">Buat Kalian Yang Mau Kerja Sama Atau Mengajak Media Partner Bisa Hubungi Kontak Dibawah Ini</p>
-                <a href="https://heylink.me/breakingnews48" class="btn btn-primary">Contact Person</a>
+                <a href="https://heylink.me/breakingnews48" class="btn btn-primary">My Contact</a>
             </div>
         </section>
     </main>
